--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -12,4 +12,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+
+    <android.support.v7.widget.CardView
+         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+         android:layout_margin="10dp"
+        android:elevation="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/playerView">
+
+        <TextView
+            android:id="@+id/tv_step_short_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center|start"
+            android:padding="10dp"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:text="ffff"/>
+
+        <TextView
+            android:id="@+id/tv_step_description"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:padding="10dp"
+             android:textSize="14sp"
+            android:text="hkhkjhjkhjkh"
+            android:layout_marginTop="25dp"/>
+
+    </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
