--- a/app/src/main/res/layout/activity_step_details.xml
+++ b/app/src/main/res/layout/activity_step_details.xml
@@ -8,9 +8,12 @@
 
     <FrameLayout
         android:id="@+id/step_container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <Button
