"solve widget issue"

--- a/app/src/main/res/xml/recipe_widget_info.xml
+++ b/app/src/main/res/xml/recipe_widget_info.xml
@@ -4,7 +4,9 @@
     android:initialLayout="@layout/recipe_widget"
     android:minWidth="300dp"
     android:minHeight="100dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen">
+
+</appwidget-provider>
