--- a/app/src/main/res/layout/widget_grid_view.xml
+++ b/app/src/main/res/layout/widget_grid_view.xml
@@ -12,7 +12,7 @@
         android:padding="10dp"
         android:background="@color/colorPrimary"
         android:contentDescription="@string/appwidget_text"
-        android:text="@string/ingredient_title"
+        android:text="@string/app_name"
         android:textColor="#ffffff"
         android:textSize="15sp"
         android:textStyle="bold|italic"/>
